--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "start": "node .",
+    "dev": "tsc-watch --onSuccess \"node .\"",
     "build": "tsc",
     "eslint": "eslint ./src/*",
     "eslint:fix": "eslint ./src/* --fix"
@@ -34,11 +35,13 @@
   "homepage": "https://github.com/Fnxi/nikobot#readme",
   "dependencies": {
     "@google/generative-ai": "0.3.1",
-    "discord-api-types": "^0.37.86",
+    "discord-api-types": "^0.37.87",
     "dotenv": "16.4.5",
     "lavalink-client": "github:tomato6966/lavalink-client",
     "mongoose": "8.2.4",
-    "seyfert": "github:tiramisulabs/seyfert"
+    "nekos.life": "^3.0.0",
+    "seyfert": "github:tiramisulabs/seyfert",
+    "tsc-watch": "6.2.0"
   },
   "devDependencies": {
     "@types/config": "3.3.4",
