--- a/package.json
+++ b/package.json
@@ -1,61 +1,54 @@
 {
-  "name": "hinagibot",
-  "version": "1.0.0",
-  "description": "discord bot Bv",
-  "main": "dist/index.js",
-  "scripts": {
-    "start": "node .",
-    "dev": "tsc-watch --onSuccess \"node .\"",
-    "build": "tsc",
-    "eslint": "eslint ./src/*",
-    "eslint:fix": "eslint ./src/* --fix"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Fnxi/nikobot.git"
-  },
-  "keywords": [
-    "discord-bot",
-    "anti-raid"
-  ],
-  "contributors": [
-    {
-      "name": "Fnxi",
-      "url": "https://github.com/Fnxi"
+    "name": "hinagibot",
+    "version": "1.0.0",
+    "description": "discord bot Bv",
+    "main": "dist/index.js",
+    "scripts": {
+        "start": "node .",
+        "dev": "tsc-watch --onSuccess \"node .\"",
+        "build": "tsc",
+        "eslint": "eslint ./src/*",
+        "eslint:fix": "eslint ./src/* --fix"
     },
-    {
-      "name": "Pryzmian",
-      "url": "https://github.com/pryzmian"
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/pryzmian/hinagi-remastered.git"
+    },
+    "keywords": [
+        "discord-bot"
+    ],
+    "author": {
+        "name": "Pryzmian",
+        "url": "https://github.com/pryzmian"
+    },
+    "license": "Apache-2.0",
+    "bugs": {
+        "url": "https://github.com/Fnxi/nikobot/issues"
+    },
+    "homepage": "https://github.com/Fnxi/nikobot#readme",
+    "dependencies": {
+        "@google/generative-ai": "0.3.1",
+        "discord-api-types": "0.37.87",
+        "dotenv": "16.4.5",
+        "lavalink-client": "github:tomato6966/lavalink-client",
+        "mongoose": "8.2.4",
+        "nekos.life": "3.0.0",
+        "seyfert": "1.5.0"
+    },
+    "devDependencies": {
+        "@types/config": "3.3.4",
+        "@types/jest": "29.5.12",
+        "@types/node": "20.11.30",
+        "@typescript-eslint/eslint-plugin": "7.4.0",
+        "@typescript-eslint/parser": "7.4.0",
+        "eslint": "8.57.0",
+        "eslint-config-prettier": "9.1.0",
+        "eslint-plugin-import": "2.29.1",
+        "eslint-plugin-prettier": "5.1.3",
+        "jest": "29.7.0",
+        "prettier": "3.2.5",
+        "ts-jest": "29.1.2",
+        "tsc-watch": "6.2.0",
+        "typescript": "5.4.3"
     }
-  ],
-  "license": "Apache-2.0",
-  "bugs": {
-    "url": "https://github.com/Fnxi/nikobot/issues"
-  },
-  "homepage": "https://github.com/Fnxi/nikobot#readme",
-  "dependencies": {
-    "@google/generative-ai": "0.3.1",
-    "discord-api-types": "^0.37.87",
-    "dotenv": "16.4.5",
-    "lavalink-client": "github:tomato6966/lavalink-client",
-    "mongoose": "8.2.4",
-    "nekos.life": "^3.0.0",
-    "seyfert": "github:tiramisulabs/seyfert",
-    "tsc-watch": "6.2.0"
-  },
-  "devDependencies": {
-    "@types/config": "3.3.4",
-    "@types/jest": "29.5.12",
-    "@types/node": "20.11.30",
-    "@typescript-eslint/eslint-plugin": "7.4.0",
-    "@typescript-eslint/parser": "7.4.0",
-    "eslint": "8.57.0",
-    "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-prettier": "5.1.3",
-    "jest": "29.7.0",
-    "prettier": "3.2.5",
-    "ts-jest": "29.1.2",
-    "typescript": "5.4.3"
-  }
 }
